## Copyright (C) 2000-2003 Peter Selinger.
## This file is part of ccrypt. It is free software and it is covered
## by the GNU general public license. See the file COPYING for details.

## Process this file with automake to produce Makefile.in

lisp_LISP = jka-compr-ccrypt.el

EXTRA_DIST = jka-compr-ccrypt.el
